logic/src/parse/snapshots/logic__parse__ui__missing_endfor.snap
---
source: logic/src/parse/ui.rs
expression: string

---
error: Your program contains a syntax error!
  ┌─ file:3:1
  │
3 │ finish
  │ ^^^^ Expected `next` in this position, however, instead there was `fini`


